# VeritasSearch

./: .env.example  .gitignore  CLAUDE.md  USER_GUIDE.md  docker-compose.yml
backend/: Dockerfile  graph.py  main.py  models.py  pyproject.toml  pyrightconfig.json
backend/agents/: auditor.py  planner.py  reporter.py  researcher.py
backend/db/: vector_store.py
backend/logic/: ai_detector.py  scoring.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EvidenceMap.tsx  TrustMeter.tsx
frontend/lib/: types.ts
searxng/: settings.yml
